final telescope and hervquant

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -24,13 +24,23 @@ SAMPLE_RUN = defaultdict(list)
 for d in METADATA:
     SAMPLE_RUN[d[config['colname_SAMPLE']]].append(d[config['colname_RUN']])
 
+
 rule all:
+    input: expand("results/completed/{samid}_completed.txt", samid=SAMPLES)
+
+rule target:
     input:
-        expand("results/telescope/{samid}_telescope_completed.txt", samid=SAMPLES)
+        expand("results/telescope/{samid}_telescope_completed.txt", samid=SAMPLES),
+        expand("results/salmon/{samid}_salmon_completed.txt", samid=SAMPLES)
+    output:
+        touch("results/completed/{samid}_completed.txt")
+
 
 include: "rules/fasterq_dump.smk"
 include: "rules/references.smk"
 include: "rules/star_index.smk"
 include: "rules/star_alignment.smk"
 include: "rules/telescope.smk"
-# include: "rules/sample_complete.smk"
+include: "rules/star_index_hervquant.smk"
+include: "rules/star_alignment_hervquant.smk"
+include: "rules/herv_quant.smk"
