--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -40,6 +40,7 @@ include: "rules/fasterq_dump.smk"
 include: "rules/references.smk"
 include: "rules/star_index.smk"
 include: "rules/ribo_detector.smk"
+include: "rules/trimming_trna.smk"
 include: "rules/star_alignment.smk"
 include: "rules/telescope.smk"
 include: "rules/star_index_hervquant.smk"
